--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 	<header>ヘッダ</header>
 	<main>
-		<h1>メイン</h1>
+		<h1>サブ1</h1>
 		<p>編集1</p>
-		<p>編集2</p>
+		<p>あああ</p>
 		<p>あああ</p>
 		<p>あああ</p>
 		<p>あああ</p>
