--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <body>
 	<header>ヘッダ</header>
 	<main>
-<<<<<<< HEAD
-		<h1>メイン こんにちは</h1>
-=======
->>>>>>> origin/過去の初コミットから
+		<h1>メイン こんにちは３</h1>
 		<p>編集1</p>
 		<p>編集2</p>
 		<p>編集3</p>
